fix ModelsSelectionModel, add in auto layout, regen, fix demos
